--- a/TicketSales/src/app/orders/orders.component.css
+++ b/TicketSales/src/app/orders/orders.component.css
@@ -140,7 +140,14 @@
   }
   
   .event-content {
-    padding: 20px;
+    padding: 15px;
+  }
+  
+
+  
+  .event-price {
+    font-size: 0.9em;
+    color: #21257ead;
   }
   
   .event-name {
@@ -179,3 +186,17 @@
     background-color: #2a9da9;
   }
   
+.container{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+  .d-flex .form-control {
+    width: auto;
+  }
+  
+  .d-flex .btn {
+    white-space: nowrap;
+    border-color:#2a78a9 ;
+  }
